Added date to top of application

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <title>JS + CSS Clock</title>
 </head>
 <body>
+    <h1 id="date"></h1>
     <div class="clock">
         <div class="clock-face">
             <div class="hand hour-hand"></div>
